[package]
name = "turbopack-convert-trace"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[[bin]]
name = "turbopack-convert-trace"
path = "src/main.rs"
bench = false

[lints]
workspace = true

[dependencies]
indexmap = { workspace = true, features = ["serde"] }
intervaltree = "0.2.7"
postcard = { workspace = true }
serde_json = { workspace = true }
turbopack-trace-utils = { workspace = true }
