[package]
name = "turbopack-trace-server"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[[bin]]
name = "turbo-trace-server"
path = "src/main.rs"
bench = false

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
either = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
turbopack-trace-utils = { workspace = true }
websocket = { version = "0.27.0", features = ["sync"] }
