[package]
name = "turborepo-filewatch"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
dashmap = { workspace = true }
futures = { version = "0.3.26" }
itertools = { workspace = true }
notify = "6.0.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.106"
thiserror = "1.0.38"
tokio = { workspace = true, features = ["full", "time"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-test = "0.2.4"
turbopath = { workspace = true }
turborepo-repository = { version = "0.1.0", path = "../turborepo-repository" }
walkdir = "2.3.3"
wax = { workspace = true }

[target."cfg(target_os=\"macos\")".dependencies.fsevent-sys]
optional = true
version = "4"

[dependencies.bitflags]
version = "1.0.4"

[dependencies.libc]
version = "0.2.4"

[dev-dependencies]
tempfile = { workspace = true }
tokio-scoped = "0.2.0"

[features]
default = ["macos_fsevent"]
macos_fsevent = ["fsevent-sys"]
manual_recursive_watch = []
watch_ancestors = []
